[package]
name = "key-derive-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.4.0", features = ["rt-multi-thread", "macros"] }
poem = "1.3.55"
dotenv = "0.15"
key-derive = { path = "/private/tmp/setup-1/crates/key-derive" }
# key-derive = "0.1.0"
[dev-dependencies]
poem = { features = ["test"] }
insta = "1"
