[package]
name = "key-derive-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.4.0", features = ["rt-multi-thread", "macros"] }
async-stream = "0.3.2"
poem = { version = "1.3.55", features = ["rustls"] }
dotenv = "0.15"
key-derive = { path = "/private/tmp/setup-1/crates/key-derive" }
# key-derive = "0.1.0"
[dev-dependencies]
poem = { features = ["test"] }
insta = "1"
rcgen = { version = "0.10", features = ["pem", "x509-parser"] }
x509-parser = { version = "0.15", features = ["verify"] }
